crates/test-files/fixtures/compile_errors/call_undefined_function_on_external_contract.fe
use std::context::Context

contract Foo {
    val: u8
}

contract Bar {
    pub fn test(ctx: Context) {
        Foo(ctx, address(0)).doesnt_exist()
    }
}
